[gd_scene load_steps=2 format=3 uid="uid://schedule_panel"]

[ext_resource type="Script" path="res://scripts/ui/schedule_panel.gd" id="1_script"]

[node name="SchedulePanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -340.0
offset_right = 260.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Harmonogram"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeaderRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CategoryLabel" type="Label" parent="VBoxContainer/HeaderRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Kategoria:"

[node name="CategoryDropdown" type="OptionButton" parent="VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LockdownButton" type="Button" parent="VBoxContainer/HeaderRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Lockdown"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ScheduleGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4
columns = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ResetButton" type="Button" parent="VBoxContainer/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Reset"

[node name="CopyButton" type="Button" parent="VBoxContainer/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Kopiuj do..."

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Zamknij"
